[fabric] Create channel using just helm
**Primary Changes**

1.Deploy fabric 2.5.4 with channel using helm charts.
2.Deploy fabric 2.2.2 with channel using helm charts.
3.Delete platforms/hyperledger-fabric/charts/fabric-anchorpper
4.Deploy with Ansible is pending
5.Update README.md files is pending

**Changes in charts**
platforms/hyperledger-fabric/charts/fabric-ca-server
platforms/hyperledger-fabric/charts/fabric-catools
platforms/hyperledger-fabric/charts/fabric-cli
platforms/hyperledger-fabric/charts/fabric-orderernode
platforms/hyperledger-fabric/charts/fabric-peernode
platforms/hyperledger-fabric/charts/fabric-channel-join
platforms/hyperledger-fabric/charts/fabric-channel-create
platforms/hyperledger-fabric/charts/fabric-osnadmin-channel-create

fixes #2549

Signed-off-by: mgCepeda <marina.gomez.cepeda@accenture.com>

--- a/platforms/hyperledger-fabric/charts/fabric-ca-server/templates/statefulset.yaml
+++ b/platforms/hyperledger-fabric/charts/fabric-ca-server/templates/statefulset.yaml
@@ -126,14 +126,14 @@ spec:
           vaultBevelFunc "readJson" "${VAULT_SECRET_ENGINE}/${VAULT_SECRET_PREFIX}/ca"
 
           ca_cert=$(echo ${VAULT_SECRET} | jq -r ".[\"ca.${COMPONENT_NAME}-cert.pem\"]")
-          echo "${ca_cert}" >> ${MOUNT_PATH}/server.crt
+          echo "${ca_cert}" > ${MOUNT_PATH}/server.crt
 
           ca_key=$(echo ${VAULT_SECRET} | jq -r ".[\"${COMPONENT_NAME}-CA.key\"]")
-          echo "${ca_key}" >> ${MOUNT_PATH}/server.key
+          echo "${ca_key}" > ${MOUNT_PATH}/server.key
              
           vaultBevelFunc "readJson" "${VAULT_SECRET_ENGINE}/${VAULT_SECRET_PREFIX}/credentials"
           user=$(echo ${VAULT_SECRET} | jq -r ".[\"user\"]")
-          echo "${user}" >> ${MOUNT_PATH}/user_cred
+          echo "${user}" > ${MOUNT_PATH}/user_cred
 
 {{- else }}
           KUBENETES_SECRET=$(kubectl get secret ca-certs --namespace ${COMPONENT_NAME} -o json)
