--- a/platforms/hyperledger-fabric/charts/fabric-cli/templates/deployment.yaml
+++ b/platforms/hyperledger-fabric/charts/fabric-cli/templates/deployment.yaml
@@ -89,7 +89,7 @@ spec:
             if [ "$SECRETS_AVAILABLE" == "yes" ]
             then
               TLS_CA_CERT=$(echo ${VAULT_SECRET} | jq -r '.["ca.crt"]')
-              echo "${TLS_CA_CERT}" >> ${OUTPUT_PATH}/ca.crt
+              echo "${TLS_CA_CERT}" > ${OUTPUT_PATH}/ca.crt
               ORDERER_TLS_SECRET=true
             else
               ORDERER_TLS_SECRET=false
@@ -112,11 +112,11 @@ spec:
               SIGNCERTS=$(echo ${VAULT_SECRET} | jq -r '.["signcerts"]')
               TLSCACERTS=$(echo ${VAULT_SECRET} | jq -r '.["tlscacerts"]')
 
-              echo "${ADMINCERT}" >> ${OUTPUT_PATH}/admincerts/admin.crt
-              echo "${CACERTS}" >> ${OUTPUT_PATH}/cacerts/ca.crt
-              echo "${KEYSTORE}" >> ${OUTPUT_PATH}/keystore/server.key
-              echo "${SIGNCERTS}" >> ${OUTPUT_PATH}/signcerts/server.crt
-              echo "${TLSCACERTS}" >> ${OUTPUT_PATH}/tlscacerts/tlsca.crt
+              echo "${ADMINCERT}" > ${OUTPUT_PATH}/admincerts/admin.crt
+              echo "${CACERTS}" > ${OUTPUT_PATH}/cacerts/ca.crt
+              echo "${KEYSTORE}" > ${OUTPUT_PATH}/keystore/server.key
+              echo "${SIGNCERTS}" > ${OUTPUT_PATH}/signcerts/server.crt
+              echo "${TLSCACERTS}" > ${OUTPUT_PATH}/tlscacerts/tlsca.crt
               ADMIN_MSP_SECRET=true
             else
               ADMIN_MSP_SECRET=false
@@ -148,11 +148,11 @@ spec:
               SIGNCERTS=$(echo ${KUBENETES_SECRET} | jq -r '.data.signcerts'  | base64 -d)
               TLSCACERTS=$(echo ${KUBENETES_SECRET} | jq -r '.data.tlscacerts'  | base64 -d)
 
-              echo "${ADMINCERT}" >> ${OUTPUT_PATH}/admincerts/admin.crt
-              echo "${CACERTS}" >> ${OUTPUT_PATH}/cacerts/ca.crt
-              echo "${KEYSTORE}" >> ${OUTPUT_PATH}/keystore/server.key
-              echo "${SIGNCERTS}" >> ${OUTPUT_PATH}/signcerts/server.crt
-              echo "${TLSCACERTS}" >> ${OUTPUT_PATH}/tlscacerts/tlsca.crt   
+              echo "${ADMINCERT}" > ${OUTPUT_PATH}/admincerts/admin.crt
+              echo "${CACERTS}" > ${OUTPUT_PATH}/cacerts/ca.crt
+              echo "${KEYSTORE}" > ${OUTPUT_PATH}/keystore/server.key
+              echo "${SIGNCERTS}" > ${OUTPUT_PATH}/signcerts/server.crt
+              echo "${TLSCACERTS}" > ${OUTPUT_PATH}/tlscacerts/tlsca.crt   
               ADMIN_MSP_SECRET=true
             fi            
           }
@@ -207,7 +207,7 @@ spec:
           subPath: package-manager.sh
       containers:
       - name: cli
-        image: {{ $.Values.image.fabricTools }}:{{ $.Values.network.version }}
+        image: {{ $.Values.image.fabricTools }}:{{ $.Values.global.network.version }}
         imagePullPolicy: IfNotPresent
         stdin: true
         tty: true
