--- a/platforms/hyperledger-fabric/charts/fabric-genesis/values.yaml
+++ b/platforms/hyperledger-fabric/charts/fabric-genesis/values.yaml
@@ -42,6 +42,10 @@ global:
     #Eg. externalUrlSuffix: test.blockchaincloudpoc.com
     externalUrlSuffix: test.blockchaincloudpoc.com
 
+  # HLF Network Version
+  network:
+    version: 2.5.4
+
 image:
   #Provide the image name for the generate-geneis container
   #Eg. image: ghcr.io/hyperledger/bevel-fabric-ca:latest
@@ -52,10 +56,6 @@ image:
   #Provide the secret to use if private repository
   #Eg. pullSecret: regcred
   pullSecret:
-
-# HLF Network Version
-network:
-  version: 2.5.4
 
 #Provide name of the consensus. Currently support raft and kafka
 #Eg. name: raft
@@ -91,7 +91,7 @@ organizations:
 # The channels defined for a network with participating peers in each channel
 channels:
   - channel:
-    channel_name: Allchannel
+    channelName: allchannel
     consortium: SupplyChainConsortium
     orderers:
       - supplychain  
@@ -109,7 +109,7 @@ settings:
   # Flag to ensure the genesis secret is removed on helm uninstall
   removeGenesisOnDelete: true
   # Flag to ensure the genesis configmap is removed on helm uninstall
-  removeGenesisConfigMapOnDelete: true
+  removeConfigMapOnDelete: true
 
 labels:
   service: []
