--- a/platforms/hyperledger-fabric/charts/fabric-orderernode/templates/configmap.yaml
+++ b/platforms/hyperledger-fabric/charts/fabric-orderernode/templates/configmap.yaml
@@ -20,7 +20,7 @@ metadata:
 data:
   FABRIC_LOGGING_SPEC: {{ $.Values.orderer.logLevel }}
   ORDERER_GENERAL_LISTENADDRESS: 0.0.0.0
-{{ if contains "2.5" $.Values.network.version }}
+{{ if contains "2.5" $.Values.global.network.version }}
   ORDERER_GENERAL_BOOTSTRAPMETHOD: "none"
 {{ else }}
   ORDERER_GENERAL_GENESISMETHOD: file
@@ -42,7 +42,7 @@ data:
   ORDERER_KAFKA_VERBOSE: "true"
   GODEBUG: "netdns=go"
   ORDERER_OPERATIONS_LISTENADDRESS: 0.0.0.0:10443
-{{ if contains "2.5" $.Values.network.version }}
+{{ if contains "2.5" $.Values.global.network.version }}
   ORDERER_ADMIN_LISTENADDRESS: 0.0.0.0:7055
   ORDERER_ADMIN_TLS_ENABLED: "true"
   ORDERER_ADMIN_TLS_PRIVATEKEY: /var/hyperledger/orderer/crypto/tls/server.key
