--- a/platforms/hyperledger-fabric/charts/fabric-orderernode/values.yaml
+++ b/platforms/hyperledger-fabric/charts/fabric-orderernode/values.yaml
@@ -44,6 +44,10 @@ global:
     #Eg. externalUrlSuffix: test.blockchaincloudpoc.com
     externalUrlSuffix: test.blockchaincloudpoc.com
 
+  # HLF Network Version
+  network:
+    version: 2.5.4
+
 catools:
   orgData:
     #Provide organization's name in lowercases
@@ -73,10 +77,6 @@ catools:
     - orderer1   
     - orderer2 
     - orderer3
-
-# HLF Network Version
-network:
-  version: 2.5.4
 
 channel:
   # Provide the channel's name
@@ -175,7 +175,7 @@ settings:
   # Flag to ensure the certificates secrets are removed on helm uninstall
   removeCertsOnDelete: true
   # Flag indicating the creation of certificates. This flag must be set to true when installing the first orderer and false in the others.
-  generateCertificates: true
+  generateCertificates: false
 
 healthCheck: 
   # The amount of times to retry fetching from/writing to Vault before giving up.
