--- a/platforms/hyperledger-fabric/charts/fabric-peernode/values.yaml
+++ b/platforms/hyperledger-fabric/charts/fabric-peernode/values.yaml
@@ -44,15 +44,16 @@ global:
     #Eg. port: 443
     port: 443
 
+  # HLF Network Version
+  network:
+    version: 2.5.4
+
 cli:
   #Creates a peer cli pod depending upon the (enabled/disabled) tag.  
   enabled: true
   #Provide the address for orderer
   #Eg. address: orderer1.test.blockchaincloudpoc.com:443
   address: orderer1.test.blockchaincloudpoc.com:443
-  # HLF Network Version
-  network:
-    version: 2.5.4
   peer:
     #Provide the localMspId for organization
     #Eg. localMspId: supplychainMSP
@@ -239,7 +240,7 @@ settings:
   # Flag to ensure the certificates secrets are removed on helm uninstall
   removeCertsOnDelete: true
   # Flag indicating the creation of certificates. This flag must be set to true when installing the first peer and false in the others.
-  generateCertificates: true
+  generateCertificates: false
 
 labels:
   service: []
