--- a/platforms/hyperledger-fabric/charts/values/noproxy-and-novault/ordererOrganization/genesis.yaml
+++ b/platforms/hyperledger-fabric/charts/values/noproxy-and-novault/ordererOrganization/genesis.yaml
@@ -9,9 +9,8 @@ global:
   proxy:
     provider: none
     externalUrlSuffix: supplychain-net
-
-network:
-  version: 2.5.4
+  network:
+    version: 2.5.4
 
 consensus:
   name: raft
@@ -37,11 +36,11 @@ organizations:
     peers:
     - peer:
       name: peer0-carrier          
-      peerAddress: peer0-carrier.cmar-net:7051 # External URI of the peer
+      peerAddress: peer0-carrier.carrier-net:7051 # External URI of the peer
 
 channels:
   - channel:
-    channel_name: Allchannel
+    channelName: allchannel
     consortium: SupplyChainConsortium
     orderers:
       - supplychain  
@@ -53,4 +52,4 @@ channels:
 
 settings:
   removeGenesisOnDelete: true
-  removeGenesisConfigMapOnDelete: true
+  removeConfigMapOnDelete: true
