--- a/platforms/hyperledger-fabric/charts/values/noproxy-and-novault/ordererOrganization/orderer.yaml
+++ b/platforms/hyperledger-fabric/charts/values/noproxy-and-novault/ordererOrganization/orderer.yaml
@@ -3,14 +3,15 @@ global:
   serviceAccountName: vault-auth
   vault:
     type: kubernetes
-
   cluster:
     provider: azure
-    cloudNativeServices: false
-  
+    cloudNativeServices: false 
   proxy:
     provider: none
     externalUrlSuffix: supplychain-net
+
+  network:
+    version: 2.5.4
 
 catools:
   orgData:
@@ -27,11 +28,8 @@ catools:
     - orderer2
     - orderer3
 
-network:
-  version: 2.5.4
-
 channel:
-  channel_name: Allchannel
+  name: allchannel
 
 orderer:
   logLevel: info
@@ -44,4 +42,4 @@ consensus:
 settings:
   removeConfigMapsOnDelete: true
   removeCertsOnDelete: true
-  generateCertificates: true
+  generateCertificates: false
