--- a/platforms/hyperledger-fabric/charts/values/noproxy-and-novault/peerOrganization/peer.yaml
+++ b/platforms/hyperledger-fabric/charts/values/noproxy-and-novault/peerOrganization/peer.yaml
@@ -3,14 +3,14 @@ global:
   serviceAccountName: vault-auth
   vault:
     type: kubernetes
-
   cluster:
     provider: azure
     cloudNativeServices: false
-
   proxy:
     provider: "none"
     externalUrlSuffix: carrier-net
+  network:
+    version: 2.5.4
 
 catools:
   orgData:
@@ -45,8 +45,6 @@ cli:
   enabled: true
   orderer:
     address: orderer1.supplychain-net:7050
-  network:
-    version: 2.5.4
   peer:
     localMspId: carrierMSP
     tlsStatus: true
@@ -65,4 +63,4 @@ peer:
 settings:
   removeConfigMapsOnDelete: true
   removeCertsOnDelete: true
-  generateCertificates: true
+  generateCertificates: false
