--- a/platforms/hyperledger-fabric/charts/values/proxy-and-vault/peerOrganization/peer.yaml
+++ b/platforms/hyperledger-fabric/charts/values/proxy-and-vault/peerOrganization/peer.yaml
@@ -8,14 +8,15 @@ global:
     authPath: carrier
     secretEngine: secretsv2
     secretPrefix: "data/carrier"
-
   cluster:
     provider: azure
     cloudNativeServices: false
-
   proxy:
     provider: haproxy
     externalUrlSuffix: test.yourdomain.com
+
+  network:
+    version: 2.5.4
 
 catools:
   orgData:
@@ -50,8 +51,6 @@ cli:
   enabled: true
   orderer:
     address: orderer1.test.yourdomain.com:443
-  network:
-    version: 2.2.2
   peer:
     localMspId: carrierMSP
     tlsStatus: true
@@ -60,14 +59,12 @@ cli:
 upgrade: False
 
 peer:
-  gossipPeerAddress: carrier-net.test.yourdomain.com:443
+  gossipPeerAddress: carrier-net.test.yourdomain.com:443 
   gossipExternalEndpoint: carrier-net.test.yourdomain.com:443
-  logLevel: info
-  builder: hyperledger/fabric-ccenv:2.5.4
   couchdb:
     username: carrier-user
 
 settings:
   removeConfigMapsOnDelete: true
   removeCertsOnDelete: true
-  generateCertificates: true
+  generateCertificates: false
