--- a/platforms/hyperledger-fabric/charts/fabric-channel-create/Chart.yaml
+++ b/platforms/hyperledger-fabric/charts/fabric-channel-create/Chart.yaml
@@ -5,7 +5,22 @@
 ##############################################################################################
 
 apiVersion: v1
-appVersion: "2.0"
-description: "Hyperledger Fabric: Creates channel."
 name: fabric-channel-create
+description: "Hyperledger Fabric: Creates channel."
 version: 1.0.0
+appVersion: latest
+keywords:
+  - bevel
+  - ethereum
+  - fabric
+  - hyperledger
+  - enterprise
+  - blockchain
+  - deployment
+  - accenture
+home: https://hyperledger-bevel.readthedocs.io/en/latest/
+sources:
+  - https://github.com/hyperledger/bevel
+maintainers:
+  - name: Hyperledger Bevel maintainers
+    email: bevel@lists.hyperledger.org
