--- a/platforms/hyperledger-fabric/charts/fabric-channel-create/templates/configmap.yaml
+++ b/platforms/hyperledger-fabric/charts/fabric-channel-create/templates/configmap.yaml
@@ -7,43 +7,47 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ $.Values.channel.name }}-config
-  namespace: {{ $.Values.metadata.namespace }}
-  {{- if $.Values.deployment.annotations }}
-    annotations:
-{{ toYaml $.Values.deployment.annotations | nindent 8 }}
-    {{- end }}
+  name: {{ .Release.Name }}-config
+  namespace: {{ .Release.Namespace }}
+  annotations:
+    {{- include "labels.deployment" . | nindent 2 }}
   labels:
-    app.kubernetes.io/name: {{ $.Values.channel.name }}-config
-    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
-    app.kubernetes.io/instance: {{ .Release.Name }} 
-    {{- include "labels.custom" . | nindent 2 }}
+    app: {{ .Release.Name }}
+    app.kubernetes.io/name: createchannel-{{ .Release.Name }}
+    app.kubernetes.io/component: fabric-channel-create-job
+    app.kubernetes.io/part-of: {{ include "fabric-channel-create.fullname" . }}
+    app.kubernetes.io/namespace: {{ .Release.Namespace }}
+    app.kubernetes.io/release: {{ .Release.Name }}
+    app.kubernetes.io/managed-by: helm
+    {{ include "labels.deployment" . | nindent 6 }} 
 data:
-  CHANNEL_NAME: {{ $.Values.channel.name }}
-  FABRIC_LOGGING_SPEC: {{ $.Values.peer.loglevel }}
-  CORE_PEER_ID: {{ $.Values.peer.name }}.{{ $.Values.metadata.namespace }}
+  CHANNEL_NAME: {{ .Release.Name }}
+  FABRIC_LOGGING_SPEC: {{ $.Values.peer.logLevel }}
+  CORE_PEER_ID: {{ $.Values.peer.name }}.{{ .Release.Namespace }}
   CORE_PEER_ADDRESS: {{ $.Values.peer.address }}
-  CORE_PEER_LOCALMSPID: {{ $.Values.peer.localmspid }}
-  CORE_PEER_TLS_ENABLED: "{{ $.Values.peer.tlsstatus }}"
+  CORE_PEER_LOCALMSPID: {{ $.Values.peer.localMspId }}
+  CORE_PEER_TLS_ENABLED: "{{ $.Values.peer.tlsStatus }}"
   CORE_PEER_TLS_ROOTCERT_FILE: /opt/gopath/src/github.com/hyperledger/fabric/crypto/admin/msp/tlscacerts/tlsca.crt
   ORDERER_CA: /opt/gopath/src/github.com/hyperledger/fabric/crypto/orderer/tls/ca.crt
   ORDERER_URL: {{ $.Values.orderer.address }}
   CORE_PEER_MSPCONFIGPATH: /opt/gopath/src/github.com/hyperledger/fabric/crypto/admin/msp
-  NETWORK_VERSION: {{ $.Values.metadata.network.version }}
+  NETWORK_VERSION: {{ $.Values.global.network.version }}
   
 ---
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: channel-artifacts-{{ $.Values.channel.name }}
-  namespace: {{ $.Values.metadata.namespace }}
+  name: channel-artifacts-{{ .Release.Name }}
+  namespace: {{ .Release.Namespace }}
   labels:
-    app.kubernetes.io/name: channel-artifacts-{{ $.Values.channel.name }}
-    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
-    app.kubernetes.io/instance: {{ .Release.Name }} 
-    {{- include "labels.custom" . | nindent 2 }}
+    app: {{ .Release.Name }}
+    app.kubernetes.io/name: createchannel-{{ .Release.Name }}
+    app.kubernetes.io/component: fabric-channel-create-job
+    app.kubernetes.io/part-of: {{ include "fabric-channel-create.fullname" . }}
+    app.kubernetes.io/namespace: {{ .Release.Namespace }}
+    app.kubernetes.io/release: {{ .Release.Name }}
+    app.kubernetes.io/managed-by: helm
+    {{ include "labels.deployment" . | nindent 6 }} 
 data:
-  channel.tx.base64: {{ .Values.channeltx | quote }}
-  
+  channel.tx.json: |-
+    {{ .Files.Get "files/channel.tx.json" | nindent 8 }}
