--- a/platforms/hyperledger-fabric/charts/fabric-channel-join/templates/join_channel.yaml
+++ b/platforms/hyperledger-fabric/charts/fabric-channel-join/templates/join_channel.yaml
@@ -7,37 +7,45 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: joinchannel-{{ $.Values.peer.name }}-{{ $.Values.channel.name }}
-  namespace: {{ $.Values.metadata.namespace }}
+  name: {{ include "fabric-channel-join.fullname" . }}
+  namespace: {{ .Release.Namespace }}
+  annotations:
+    "helm.sh/hook": post-install
+    "helm.sh/hook-weight": "0"
   labels:
-    app: joinchannel-{{ $.Values.peer.name }}-{{ $.Values.channel.name }}
-    app.kubernetes.io/name: joinchannel-{{ $.Values.peer.name }}-{{ $.Values.channel.name }}
-    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    {{- include "labels.custom" . | nindent 2 }}
+    app: {{ .Release.Name }}
+    app.kubernetes.io/name: channel-join-{{ .Release.Name }}
+    app.kubernetes.io/component: fabric-channel-join-job
+    app.kubernetes.io/part-of: {{ include "fabric-channel-join.fullname" . }}
+    app.kubernetes.io/namespace: {{ .Release.Namespace }}
+    app.kubernetes.io/release: {{ .Release.Name }}
+    app.kubernetes.io/managed-by: helm
+    {{ include "labels.deployment" . | nindent 6 }} 
 spec:
   backoffLimit: 6
   template:
     metadata:
       labels:
-        app: joinchannel-{{ $.Values.peer.name }}-{{ $.Values.channel.name }}
-        app.kubernetes.io/name: joinchannel-{{ $.Values.peer.name }}-{{ $.Values.channel.name }}
-        helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
-        app.kubernetes.io/managed-by: {{ .Release.Service }}
-        app.kubernetes.io/instance: {{ .Release.Name }}
+        app: {{ .Release.Name }}
+        app.kubernetes.io/name: channel-join-{{ .Release.Name }}
+        app.kubernetes.io/component: fabric-channel-join-job
+        app.kubernetes.io/part-of: {{ include "fabric-channel-join.fullname" . }}
+        app.kubernetes.io/namespace: {{ .Release.Namespace }}
+        app.kubernetes.io/release: {{ .Release.Name }}
+        app.kubernetes.io/managed-by: helm
+        {{ include "labels.deployment" . | nindent 6 }} 
     spec:
       restartPolicy: "OnFailure"
-      serviceAccountName: {{ $.Values.vault.serviceaccountname }}
-      {{- if .Values.vault.imagesecretname }}
+      serviceAccountName: {{ $.Values.global.serviceAccountName }}
+      {{- if .Values.global.vault.imageSecretName }}
       imagePullSecrets:
-        - name: {{ $.Values.vault.imagesecretname }}
+        - name: {{ $.Values.global.vault.imageSecretName }}
       {{- end }}
       volumes:
-      {{ if .Values.vault.tls  }}
+      {{ if .Values.global.vault.tls  }}
       - name: vaultca
         secret:
-          secretName: {{ $.Values.vault.tls }}
+          secretName: {{ $.Values.global.vault.tls }}
           items:
           - key: ca.crt.pem
             path: ca-certificates.crt  # curl expects certs to be in /etc/ssl/certs/ca-certificates.crt
@@ -50,48 +58,94 @@ spec:
           name: bevel-vault-script
       initContainers:
       - name: certificates-init
-        image: {{ $.Values.metadata.images.alpineutils }}
+        image: {{ $.Values.image.alpineUtils }}
         imagePullPolicy: IfNotPresent
         env:
         - name: VAULT_ADDR
-          value: {{ $.Values.vault.address }}
-        - name: KUBERNETES_AUTH_PATH
-          value: {{ $.Values.vault.authpath }}
+          value: {{ $.Values.global.vault.address }}
         - name: VAULT_APP_ROLE
-          value: {{ $.Values.vault.role }}
-        - name: VAULT_PEER_SECRET_PREFIX
-          value: "{{ $.Values.vault.adminsecretprefix }}"
-        - name: VAULT_ORDERER_SECRET_PREFIX
-          value: "{{ $.Values.vault.orderersecretprefix }}"
+          value: {{ $.Values.global.vault.role }}
+        - name: KUBERNETES_AUTH_PATH
+          value: {{ $.Values.global.vault.authPath }}
+        - name: VAULT_SECRET_ENGINE
+          value: "{{ .Values.global.vault.secretEngine }}"
+        - name: VAULT_SECRET_PREFIX
+          value: "{{ .Values.global.vault.secretPrefix }}"
+        - name: VAULT_TYPE
+          value: "{{ $.Values.global.vault.type }}"
         - name: MOUNT_PATH
           value: /secret
-        - name: VAULT_TYPE
-          value: "{{ $.Values.vault.type }}"
         command: ["sh", "-c"]
         args:
         - |-
           #!/usr/bin/env sh
-          . /scripts/bevel-vault.sh
+{{- if eq .Values.global.vault.type "hashicorp" }}
 
-          # Calling a function to retrieve the vault token.
+          . /scripts/bevel-vault.sh
           vaultBevelFunc "init"
 
-          echo "Getting Orderer TLS certificates from Vault."
-          vaultBevelFunc "readJson" "${VAULT_ORDERER_SECRET_PREFIX}/tls"
+          function getOrdererTlsSecret {
+            KEY=$1
+            KEY_FORMATTED=$(echo $KEY | tr - /)
+       
+            echo "Getting Orderer TLS certificates from Vault using key $vault_secret_key"
+            vaultBevelFunc "readJson" "${VAULT_SECRET_ENGINE}/${VAULT_SECRET_PREFIX}/${KEY_FORMATTED}"
 
-          TLS_CA_CERT=$(echo ${VAULT_SECRET} | jq -r '.["ca.crt"]')
+            TLS_CA_CERT=$(echo ${VAULT_SECRET} | jq -r '.["ca.crt"]')
+            echo "${TLS_CA_CERT}" > ${OUTPUT_PATH}/ca.crt
+          }
+
+          function getAdminMspSecret {
+            KEY=$1
+            KEY_FORMATTED=$(echo $KEY | tr - /)
+
+            echo "Getting MSP certificates from Vault."
+            vaultBevelFunc "readJson" "${VAULT_SECRET_ENGINE}/${VAULT_SECRET_PREFIX}/${KEY_FORMATTED}"
+
+            ADMINCERT=$(echo ${VAULT_SECRET} | jq -r '.["admincerts"]')
+            CACERTS=$(echo ${VAULT_SECRET} | jq -r '.["cacerts"]')
+            KEYSTORE=$(echo ${VAULT_SECRET} | jq -r '.["keystore"]')
+            SIGNCERTS=$(echo ${VAULT_SECRET} | jq -r '.["signcerts"]')
+            TLSCACERTS=$(echo ${VAULT_SECRET} | jq -r '.["tlscacerts"]')
+
+            echo "${ADMINCERT}" > ${OUTPUT_PATH}/admincerts/admin.crt
+            echo "${CACERTS}" > ${OUTPUT_PATH}/cacerts/ca.crt
+            echo "${KEYSTORE}" > ${OUTPUT_PATH}/keystore/server.key
+            echo "${SIGNCERTS}" > ${OUTPUT_PATH}/signcerts/server.crt
+            echo "${TLSCACERTS}" > ${OUTPUT_PATH}/tlscacerts/tlsca.crt
+          }
+
+{{- else }}
+
+          function getOrdererTlsSecret {
+            KEY=$1
+            kubectl get secret ${KEY} --namespace {{ .Release.Namespace }}  -o json > /dev/null 2>&1
+            if [ $? -eq 0 ]; then
+              kubectl get secret ${KEY} --namespace {{ .Release.Namespace }} --output="jsonpath={.data.cacrt}" | base64 -d > ${OUTPUT_PATH}/ca.crt
+            fi
+          }
+
+          function getAdminMspSecret {
+            KEY=$1
+            KUBENETES_SECRET=$(kubectl get secret ${KEY} --namespace {{ .Release.Namespace }} -o json)
+
+            ADMINCERT=$(echo ${KUBENETES_SECRET} | jq -r '.data.admincerts'  | base64 -d)
+            CACERTS=$(echo ${KUBENETES_SECRET} | jq -r '.data.cacerts'  | base64 -d)
+            KEYSTORE=$(echo ${KUBENETES_SECRET} | jq -r '.data.keystore'  | base64 -d)
+            SIGNCERTS=$(echo ${KUBENETES_SECRET} | jq -r '.data.signcerts'  | base64 -d)
+            TLSCACERTS=$(echo ${KUBENETES_SECRET} | jq -r '.data.tlscacerts'  | base64 -d)
+
+            echo "${ADMINCERT}" > ${OUTPUT_PATH}/admincerts/admin.crt
+            echo "${CACERTS}" > ${OUTPUT_PATH}/cacerts/ca.crt
+            echo "${KEYSTORE}" > ${OUTPUT_PATH}/keystore/server.key
+            echo "${SIGNCERTS}" > ${OUTPUT_PATH}/signcerts/server.crt
+            echo "${TLSCACERTS}" > ${OUTPUT_PATH}/tlscacerts/tlsca.crt      
+          }
+
+{{- end }}
           OUTPUT_PATH="${MOUNT_PATH}/orderer/tls"
           mkdir -p ${OUTPUT_PATH}
-          echo "${TLS_CA_CERT}" >> ${OUTPUT_PATH}/ca.crt
-
-          echo "Getting MSP certificates from Vault."
-          vaultBevelFunc "readJson" "${VAULT_PEER_SECRET_PREFIX}/msp"
-
-          ADMINCERT=$(echo ${VAULT_SECRET} | jq -r '.["admincerts"]')
-          CACERTS=$(echo ${VAULT_SECRET} | jq -r '.["cacerts"]')
-          KEYSTORE=$(echo ${VAULT_SECRET} | jq -r '.["keystore"]')
-          SIGNCERTS=$(echo ${VAULT_SECRET} | jq -r '.["signcerts"]')
-          TLSCACERTS=$(echo ${VAULT_SECRET} | jq -r '.["tlscacerts"]')
+          getOrdererTlsSecret orderer-tls
 
           OUTPUT_PATH="${MOUNT_PATH}/admin/msp"
           mkdir -p ${OUTPUT_PATH}/admincerts
@@ -99,14 +153,9 @@ spec:
           mkdir -p ${OUTPUT_PATH}/keystore
           mkdir -p ${OUTPUT_PATH}/signcerts
           mkdir -p ${OUTPUT_PATH}/tlscacerts
-
-          echo "${ADMINCERT}" >> ${OUTPUT_PATH}/admincerts/admin.crt
-          echo "${CACERTS}" >> ${OUTPUT_PATH}/cacerts/ca.crt
-          echo "${KEYSTORE}" >> ${OUTPUT_PATH}/keystore/server.key
-          echo "${SIGNCERTS}" >> ${OUTPUT_PATH}/signcerts/server.crt
-          echo "${TLSCACERTS}" >> ${OUTPUT_PATH}/tlscacerts/tlsca.crt
+          getAdminMspSecret admin-msp
         volumeMounts:
-        {{ if .Values.vault.tls  }}
+        {{ if .Values.global.vault.tls  }}
         - name: vaultca
           mountPath: "/etc/ssl/certs/"
           readOnly: true
@@ -118,7 +167,7 @@ spec:
           subPath: bevel-vault.sh       
       containers:
       - name: joinchannel
-        image: {{ $.Values.metadata.images.fabrictools }}
+        image: {{ $.Values.image.fabricTools }}:{{ $.Values.global.network.version }} 
         imagePullPolicy: IfNotPresent
         stdin: true
         tty: true
