--- a/platforms/hyperledger-fabric/charts/fabric-orderernode/templates/node-statefulset.yaml
+++ b/platforms/hyperledger-fabric/charts/fabric-orderernode/templates/node-statefulset.yaml
@@ -64,10 +64,10 @@ spec:
           - key: ca.crt.pem
             path: ca-certificates.crt  # curl expects certs to be in /etc/ssl/certs/ca-certificates.crt
       {{ end  }}
-      {{- if ne $.Values.network.version "2.5.4" }}
+      {{- if ne $.Values.global.network.version "2.5.4" }}
       - name: {{ .Release.Name }}-genesis-volume
         configMap:
-          name: {{ $.Values.channel.channel_name | lower }}-genesis-file
+          name: {{ $.Values.channel.name | lower }}-genesis-file
           items:
             - key: genesis.block.base64
               path: genesis.block.base64
@@ -169,9 +169,9 @@ spec:
               TLS_SERVER_CERT=$(echo ${VAULT_SECRET} | jq -r '.["server.crt"]')
               TLS_SERVER_KEY=$(echo ${VAULT_SECRET} | jq -r '.["server.key"]')
               
-              echo "${TLS_CA_CERT}" >> ${OUTPUT_PATH}/ca.crt
-              echo "${TLS_SERVER_CERT}" >> ${OUTPUT_PATH}/server.crt
-              echo "${TLS_SERVER_KEY}" >> ${OUTPUT_PATH}/server.key
+              echo "${TLS_CA_CERT}" > ${OUTPUT_PATH}/ca.crt
+              echo "${TLS_SERVER_CERT}" > ${OUTPUT_PATH}/server.crt
+              echo "${TLS_SERVER_KEY}" > ${OUTPUT_PATH}/server.key
               ORDERER_TLS_SECRET=true
             else
               ORDERER_TLS_SECRET=false
@@ -192,11 +192,11 @@ spec:
               SIGNCERTS=$(echo ${VAULT_SECRET} | jq -r '.["signcerts"]')
               TLSCACERTS=$(echo ${VAULT_SECRET} | jq -r '.["tlscacerts"]')
 
-              echo "${ADMINCERT}" >> ${OUTPUT_PATH}/admincerts/admin.crt
-              echo "${CACERTS}" >> ${OUTPUT_PATH}/cacerts/ca.crt
-              echo "${KEYSTORE}" >> ${OUTPUT_PATH}/keystore/server.key
-              echo "${SIGNCERTS}" >> ${OUTPUT_PATH}/signcerts/server.crt
-              echo "${TLSCACERTS}" >> ${OUTPUT_PATH}/tlscacerts/tlsca.crt
+              echo "${ADMINCERT}" > ${OUTPUT_PATH}/admincerts/admin.crt
+              echo "${CACERTS}" > ${OUTPUT_PATH}/cacerts/ca.crt
+              echo "${KEYSTORE}" > ${OUTPUT_PATH}/keystore/server.key
+              echo "${SIGNCERTS}" > ${OUTPUT_PATH}/signcerts/server.crt
+              echo "${TLSCACERTS}" > ${OUTPUT_PATH}/tlscacerts/tlsca.crt
               ORDERER_MSP_SECRET=true
             else
               ORDERER_MSP_SECRET=false
@@ -214,9 +214,9 @@ spec:
               TLS_SERVER_CERT=$(echo ${KUBENETES_SECRET} | jq -r '.data.servercrt'  | base64 -d)
               TLS_SERVER_KEY=$(echo ${KUBENETES_SECRET} | jq -r '.data.serverkey'  | base64 -d)
               
-              echo "${TLS_CA_CERT}" >> ${OUTPUT_PATH}/ca.crt
-              echo "${TLS_SERVER_CERT}" >> ${OUTPUT_PATH}/server.crt
-              echo "${TLS_SERVER_KEY}" >> ${OUTPUT_PATH}/server.key
+              echo "${TLS_CA_CERT}" > ${OUTPUT_PATH}/ca.crt
+              echo "${TLS_SERVER_CERT}" > ${OUTPUT_PATH}/server.crt
+              echo "${TLS_SERVER_KEY}" > ${OUTPUT_PATH}/server.key
               ORDERER_TLS_SECRET=true
             fi
           }
@@ -233,11 +233,11 @@ spec:
               SIGNCERTS=$(echo ${KUBENETES_SECRET} | jq -r '.data.signcerts'  | base64 -d)
               TLSCACERTS=$(echo ${KUBENETES_SECRET} | jq -r '.data.tlscacerts'  | base64 -d)
 
-              echo "${ADMINCERT}" >> ${OUTPUT_PATH}/admincerts/admin.crt
-              echo "${CACERTS}" >> ${OUTPUT_PATH}/cacerts/ca.crt
-              echo "${KEYSTORE}" >> ${OUTPUT_PATH}/keystore/server.key
-              echo "${SIGNCERTS}" >> ${OUTPUT_PATH}/signcerts/server.crt
-              echo "${TLSCACERTS}" >> ${OUTPUT_PATH}/tlscacerts/tlsca.crt
+              echo "${ADMINCERT}" > ${OUTPUT_PATH}/admincerts/admin.crt
+              echo "${CACERTS}" > ${OUTPUT_PATH}/cacerts/ca.crt
+              echo "${KEYSTORE}" > ${OUTPUT_PATH}/keystore/server.key
+              echo "${SIGNCERTS}" > ${OUTPUT_PATH}/signcerts/server.crt
+              echo "${TLSCACERTS}" > ${OUTPUT_PATH}/tlscacerts/tlsca.crt
               ORDERER_MSP_SECRET=true
             fi                 
           }
@@ -287,7 +287,7 @@ spec:
           subPath: bevel-vault.sh
       containers:
       - name: {{ .Release.Name }}
-        image: {{ $.Values.image.orderer }}:{{ $.Values.network.version }}
+        image: {{ $.Values.image.orderer }}:{{ $.Values.global.network.version }}
         imagePullPolicy: IfNotPresent 
         workingDir: /opt/gopath/src/github.com/hyperledger/fabric
         command: ["sh", "-c", "cat /var/hyperledger/orderer/genesis/genesis.block.base64 | base64 -d > /var/hyperledger/orderer/orderer.genesis.block && orderer"]
@@ -301,7 +301,7 @@ spec:
         volumeMounts:
         - name: datadir
           mountPath: /var/hyperledger/production/orderer
-        {{- if ne $.Values.network.version "2.5.4" }}
+        {{- if ne $.Values.global.network.version "2.5.4" }}
         - name: {{ .Release.Name }}-genesis-volume
           mountPath: /var/hyperledger/orderer/genesis
           readOnly: true
