--- a/platforms/hyperledger-fabric/charts/fabric-osnadmin-channel-create/templates/configmap.yaml
+++ b/platforms/hyperledger-fabric/charts/fabric-osnadmin-channel-create/templates/configmap.yaml
@@ -7,23 +7,24 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ $.Values.channel.name }}-config
-  namespace: {{ $.Values.metadata.namespace }}
-  {{- if $.Values.deployment.annotations }}
-    annotations:
-{{ toYaml $.Values.deployment.annotations | nindent 8 }}
-    {{- end }}
+  name: {{ .Release.Name }}-config
+  namespace: {{ .Release.Namespace }}
+  annotations:
+    {{- include "labels.deployment" . | nindent 2 }}
   labels:
-    app.kubernetes.io/name: {{ $.Values.channel.name }}-config
-    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
-    app.kubernetes.io/instance: {{ .Release.Name }} 
-    {{- include "labels.custom" . | nindent 2 }}
+    app: {{ .Release.Name }}
+    app.kubernetes.io/name:  osn-createchannel-{{ .Release.Name }}
+    app.kubernetes.io/component: fabric-osnadmin-channel-create-job
+    app.kubernetes.io/part-of: {{ include "fabric-osnadmin-channel-create.fullname" . }}
+    app.kubernetes.io/namespace: {{ .Release.Namespace }}
+    app.kubernetes.io/release: {{ .Release.Name }}
+    app.kubernetes.io/managed-by: helm
+    {{ include "labels.deployment" . | nindent 6 }} 
 data:
-  CHANNEL_NAME: {{ $.Values.channel.name }}
+  CHANNEL_NAME: {{ .Release.Name }}
   ADMIN_TLS_CERTS: /opt/gopath/src/github.com/hyperledger/fabric/crypto
   GENESIS_FILE: /opt/gopath/src/github.com/hyperledger/fabric/orderer/genesis
-{{- if $.Values.add_orderer }}
+{{- if $.Values.addOrderer }}
   CORE_PEER_LOCALMSPID: {{ $.Values.orderer.localmspid }}
   CORE_PEER_TLS_ROOTCERT_FILE: /opt/gopath/src/github.com/hyperledger/fabric/crypto/admin/msp/tlscacerts/tlsca.crt
   CORE_PEER_MSPCONFIGPATH: /opt/gopath/src/github.com/hyperledger/fabric/crypto/admin/msp
@@ -31,19 +32,3 @@ data:
   ORDERER_CA: /opt/gopath/src/github.com/hyperledger/fabric/crypto/{{ $.Values.orderer.name }}/tls/ca.crt
 {{ end }}
 
----
-{{- if not $.Values.add_orderer }}
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: {{ $.Values.channel.name }}-genesis-block
-  namespace: {{ $.Values.metadata.namespace }}
-  labels:
-    app.kubernetes.io/name: genesis-block
-    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    {{- include "labels.custom" . | nindent 2 }}
-data:
-  genesis.block.base64: {{  $.Values.genesis | quote }}
-{{ end }}
