--- a/platforms/hyperledger-fabric/charts/fabric-osnadmin-channel-create/templates/osn_create_channel.yaml
+++ b/platforms/hyperledger-fabric/charts/fabric-osnadmin-channel-create/templates/osn_create_channel.yaml
@@ -7,48 +7,52 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: osn-createchannel-{{ $.Values.channel.name }}
-  namespace: {{ $.Values.metadata.namespace }}
-  {{- if $.Values.deployment.annotations }}
-    annotations:
-{{ toYaml $.Values.deployment.annotations | nindent 8 }}
-    {{- end }}
+  name: {{ include "fabric-osnadmin-channel-create.fullname" . }}
+  namespace: {{ .Release.Namespace }}
+  annotations:
+      {{- include "labels.deployment" . | nindent 2 }}
   labels:
-    app: osn-createchannel-{{ $.Values.channel.name }}
-    app.kubernetes.io/name: osn-createchannel-{{ $.Values.channel.name }}
-    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    {{- include "labels.custom" . | nindent 2 }}    
+    app: {{ .Release.Name }}
+    app.kubernetes.io/name:  osn-createchannel-{{ .Release.Name }}
+    app.kubernetes.io/component: fabric-osnadmin-channel-create-job
+    app.kubernetes.io/part-of: {{ include "fabric-osnadmin-channel-create.fullname" . }}
+    app.kubernetes.io/namespace: {{ .Release.Namespace }}
+    app.kubernetes.io/release: {{ .Release.Name }}
+    app.kubernetes.io/managed-by: helm
+    {{ include "labels.deployment" . | nindent 6 }} 
 spec:
   backoffLimit: 6
   template:
     metadata:
       labels:
-        app: osn-createchannel-{{ $.Values.channel.name }}
-        app.kubernetes.io/name: osn-createchannel-{{ $.Values.channel.name }}
-        app.kubernetes.io/instance: {{ .Release.Name }} 
-        app.kubernetes.io/managed-by: {{ .Release.Service }}
+        app: {{ .Release.Name }}
+        app.kubernetes.io/name:  osn-createchannel-{{ .Release.Name }}
+        app.kubernetes.io/component: fabric-osnadmin-channel-create-job
+        app.kubernetes.io/part-of: {{ include "fabric-osnadmin-channel-create.fullname" . }}
+        app.kubernetes.io/namespace: {{ .Release.Namespace }}
+        app.kubernetes.io/release: {{ .Release.Name }}
+        app.kubernetes.io/managed-by: helm
+        {{ include "labels.deployment" . | nindent 6 }} 
     spec:
       restartPolicy: "OnFailure"
-      serviceAccountName: {{ $.Values.vault.serviceaccountname }}
-      {{- if .Values.vault.imagesecretname }}
+      serviceAccountName: {{ $.Values.global.serviceAccountName }}
+      {{- if .Values.global.vault.imageSecretName }}
       imagePullSecrets:
-        - name: {{ $.Values.vault.imagesecretname }}
+        - name: {{ $.Values.global.vault.imageSecretName }}
       {{- end }}
       volumes:
-      {{ if .Values.vault.tls  }}
+      {{ if .Values.global.vault.tls  }}
       - name: vaultca
         secret:
-          secretName: {{ $.Values.vault.tls }}
+          secretName: {{ $.Values.global.vault.tls }}
           items:
           - key: ca.crt.pem
             path: ca-certificates.crt
       {{ end  }}
-      {{- if not $.Values.add_orderer }}
+      {{- if not $.Values.addOrderer }}
       - name: genesis
         configMap:
-          name: {{ $.Values.channel.name }}-genesis-block
+          name: {{ .Release.Name }}-genesis-file
           items:
             - key: genesis.block.base64
               path: genesis.block.base64
@@ -61,41 +65,59 @@ spec:
           name: bevel-vault-script
       initContainers:
       - name: certificates-init
-        image: {{ $.Values.metadata.images.alpineutils }}
+        image: {{ $.Values.image.alpineUtils }}
         imagePullPolicy: IfNotPresent
         env:
         - name: VAULT_ADDR
-          value: {{ $.Values.vault.address }}
-        - name: KUBERNETES_AUTH_PATH
-          value: {{ $.Values.vault.authpath }}
+          value: {{ $.Values.global.vault.address }}
         - name: VAULT_APP_ROLE
-          value: {{ $.Values.vault.role }}
-        - name: VAULT_ADMIN_SECRET_PREFIX
-          value: "{{ $.Values.vault.adminsecretprefix }}"
-        - name: VAULT_ORDERER_SECRET_PREFIX
-          value: "{{ $.Values.vault.orderersecretprefix }}"
+          value: {{ $.Values.global.vault.role }}
+        - name: KUBERNETES_AUTH_PATH
+          value: {{ $.Values.global.vault.authPath }}
+        - name: VAULT_SECRET_ENGINE
+          value: "{{ .Values.global.vault.secretEngine }}"
+        - name: VAULT_SECRET_PREFIX
+          value: "{{ .Values.global.vault.secretPrefix }}"
+        - name: VAULT_TYPE
+          value: "{{ $.Values.global.vault.type }}"
         - name: ORDERERS_NAMES
-          value: "{{ $.Values.orderers.orderer_info }}"
+          value: "{{ $.Values.orderers | join " " -}}"
         - name: COMPONENT_NAME
-          value: {{ $.Values.metadata.namespace }}
+          value: {{ .Release.Namespace }}
         - name: MOUNT_PATH
           value: /secret
-        - name: VAULT_TYPE
-          value: "{{ $.Values.vault.type }}"
         command: ["sh", "-c"]
         args:
         - |-
           #!/usr/bin/env sh
-          source /scripts/bevel-vault.sh
 
+{{- if eq .Values.global.vault.type "hashicorp" }}
+
+          source /scripts/bevel-vault.sh
           vaultBevelFunc "init"
 
-          list=$(echo "$ORDERERS_NAMES" | tr "*" "\n")
-          for ORDERER in $list
-          do
-            ORDERER_NAME="${ORDERER%%,*}"
-            # Check if orderer msp already created
-            vaultBevelFunc "readJson" "${VAULT_ORDERER_SECRET_PREFIX}/${ORDERER_NAME}.${COMPONENT_NAME}/msp"
+          function getOrdererTlsSecret {
+            KEY=$1
+            KEY_FORMATTED=$(echo $KEY | tr - /)
+       
+            echo "Getting TLS certificates from Vault."
+            vaultBevelFunc "readJson" "${VAULT_SECRET_ENGINE}/${VAULT_SECRET_PREFIX}/${KEY_FORMATTED}"
+
+            TLS_CA_CERT=$(echo ${VAULT_SECRET} | jq -r '.["ca.crt"]')
+            TLS_SERVER_CERT=$(echo ${VAULT_SECRET} | jq -r '.["server.crt"]')
+            TLS_SERVER_KEY=$(echo ${VAULT_SECRET} | jq -r '.["server.key"]')
+            
+            echo "${TLS_CA_CERT}" > ${OUTPUT_PATH}/ca.crt
+            echo "${TLS_SERVER_CERT}" > ${OUTPUT_PATH}/server.crt
+            echo "${TLS_SERVER_KEY}" > ${OUTPUT_PATH}/server.key
+          }
+
+          function getOrdererMspSecret {
+            KEY=$1
+            KEY_FORMATTED=$(echo $KEY | tr - /)
+
+            echo "Getting MSP certificates from Vault."
+            vaultBevelFunc "readJson" "${VAULT_SECRET_ENGINE}/${VAULT_SECRET_PREFIX}/${KEY_FORMATTED}"
 
             ADMINCERT=$(echo ${VAULT_SECRET} | jq -r '.["admincerts"]')
             CACERTS=$(echo ${VAULT_SECRET} | jq -r '.["cacerts"]')
@@ -103,43 +125,44 @@ spec:
             SIGNCERTS=$(echo ${VAULT_SECRET} | jq -r '.["signcerts"]')
             TLSCACERTS=$(echo ${VAULT_SECRET} | jq -r '.["tlscacerts"]')
 
-            OUTPUT_PATH="${MOUNT_PATH}/${ORDERER_NAME}/msp"
-            mkdir -p ${OUTPUT_PATH}/admincerts
-            mkdir -p ${OUTPUT_PATH}/cacerts
-            mkdir -p ${OUTPUT_PATH}/keystore
-            mkdir -p ${OUTPUT_PATH}/signcerts
-            mkdir -p ${OUTPUT_PATH}/tlscacerts
+            echo "${ADMINCERT}" > ${OUTPUT_PATH}/admincerts/admin.crt
+            echo "${CACERTS}" > ${OUTPUT_PATH}/cacerts/ca.crt
+            echo "${KEYSTORE}" > ${OUTPUT_PATH}/keystore/server.key
+            echo "${SIGNCERTS}" > ${OUTPUT_PATH}/signcerts/server.crt
+            echo "${TLSCACERTS}" > ${OUTPUT_PATH}/tlscacerts/tlsca.crt
+          }
+{{- else }}
 
-            echo "${ADMINCERT}" >> ${OUTPUT_PATH}/admincerts/admin.crt
-            echo "${CACERTS}" >> ${OUTPUT_PATH}/cacerts/ca.crt
-            echo "${KEYSTORE}" >> ${OUTPUT_PATH}/keystore/server.key
-            echo "${SIGNCERTS}" >> ${OUTPUT_PATH}/signcerts/server.crt
-            echo "${TLSCACERTS}" >> ${OUTPUT_PATH}/tlscacerts/tlsca.crt
+          function getOrdererTlsSecret {
+            KEY=$1
+            KUBENETES_SECRET=$(kubectl get secret ${KEY} --namespace {{ .Release.Namespace }} -o json)
+            CACERT=$(echo ${KUBENETES_SECRET} | jq -r '.data.cacrt'  | base64 -d)
+            CLIENTSEVER=$(echo ${KUBENETES_SECRET} | jq -r '.data.servercrt'  | base64 -d)
+            CLIENTKEY=$(echo ${KUBENETES_SECRET} | jq -r '.data.serverkey'  | base64 -d)
+            
+            echo "${CACERT}" > ${OUTPUT_PATH}/ca.crt
+            echo "${CLIENTSEVER}" > ${OUTPUT_PATH}/server.crt
+            echo "${CLIENTKEY}" > ${OUTPUT_PATH}/server.key
+          }
 
-            # Check if orderers tls already created
-            vaultBevelFunc "readJson" "${VAULT_ORDERER_SECRET_PREFIX}/${ORDERER_NAME}.${COMPONENT_NAME}/tls" 
+          function getOrdererMspSecret {
+            KEY=$1                       
+            KUBENETES_SECRET=$(kubectl get secret ${KEY} --namespace {{ .Release.Namespace }} -o json)
 
-            CACERT=$(echo ${VAULT_SECRET} | jq -r '.["ca.crt"]')
-            CLIENTSEVER=$(echo ${VAULT_SECRET} | jq -r '.["server.crt"]')
-            CLIENTKEY=$(echo ${VAULT_SECRET} | jq -r '.["server.key"]')
+            ADMINCERT=$(echo ${KUBENETES_SECRET} | jq -r '.data.admincerts'  | base64 -d)
+            CACERTS=$(echo ${KUBENETES_SECRET} | jq -r '.data.cacerts'  | base64 -d)
+            KEYSTORE=$(echo ${KUBENETES_SECRET} | jq -r '.data.keystore'  | base64 -d)
+            SIGNCERTS=$(echo ${KUBENETES_SECRET} | jq -r '.data.signcerts'  | base64 -d)
+            TLSCACERTS=$(echo ${KUBENETES_SECRET} | jq -r '.data.tlscacerts'  | base64 -d)
 
-            OUTPUT_PATH="${MOUNT_PATH}/${ORDERER_NAME}/tls"
-            mkdir -p ${OUTPUT_PATH}
-
-            echo "${CACERT}" >> ${OUTPUT_PATH}/ca.crt
-            echo "${CLIENTSEVER}" >> ${OUTPUT_PATH}/server.crt
-            echo "${CLIENTKEY}" >> ${OUTPUT_PATH}/server.key
-          done
-
-          ###############################################################################
-          echo "Getting MSP certificates from Vault using key $vault_secret_key"
-          vaultBevelFunc "readJson" "${VAULT_ADMIN_SECRET_PREFIX}/msp"
-
-          ADMINCERT=$(echo ${VAULT_SECRET} | jq -r '.["admincerts"]')
-          CACERTS=$(echo ${VAULT_SECRET} | jq -r '.["cacerts"]')
-          KEYSTORE=$(echo ${VAULT_SECRET} | jq -r '.["keystore"]')
-          SIGNCERTS=$(echo ${VAULT_SECRET} | jq -r '.["signcerts"]')
-          TLSCACERTS=$(echo ${VAULT_SECRET} | jq -r '.["tlscacerts"]')
+            echo "${ADMINCERT}" > ${OUTPUT_PATH}/admincerts/admin.crt
+            echo "${CACERTS}" > ${OUTPUT_PATH}/cacerts/ca.crt
+            echo "${KEYSTORE}" > ${OUTPUT_PATH}/keystore/server.key
+            echo "${SIGNCERTS}" > ${OUTPUT_PATH}/signcerts/server.crt
+            echo "${TLSCACERTS}" > ${OUTPUT_PATH}/tlscacerts/tlsca.crt
+      
+          }
+{{- end }}
 
           OUTPUT_PATH="${MOUNT_PATH}/admin/msp"
           mkdir -p ${OUTPUT_PATH}/admincerts
@@ -147,15 +170,25 @@ spec:
           mkdir -p ${OUTPUT_PATH}/keystore
           mkdir -p ${OUTPUT_PATH}/signcerts
           mkdir -p ${OUTPUT_PATH}/tlscacerts
+          getOrdererMspSecret admin-msp
 
-          echo "${ADMINCERT}" >> ${OUTPUT_PATH}/admincerts/admin.crt
-          echo "${CACERTS}" >> ${OUTPUT_PATH}/cacerts/ca.crt
-          echo "${KEYSTORE}" >> ${OUTPUT_PATH}/keystore/server.key
-          echo "${SIGNCERTS}" >> ${OUTPUT_PATH}/signcerts/server.crt
-          echo "${TLSCACERTS}" >> ${OUTPUT_PATH}/tlscacerts/tlsca.crt
+          for ORDERER_NAME in $ORDERERS_NAMES
+          do
+            OUTPUT_PATH="${MOUNT_PATH}/${ORDERER_NAME}/msp"
+            mkdir -p ${OUTPUT_PATH}/admincerts
+            mkdir -p ${OUTPUT_PATH}/cacerts
+            mkdir -p ${OUTPUT_PATH}/keystore
+            mkdir -p ${OUTPUT_PATH}/signcerts
+            mkdir -p ${OUTPUT_PATH}/tlscacerts
+            getOrdererMspSecret ${ORDERER_NAME}-msp
+
+            OUTPUT_PATH="${MOUNT_PATH}/${ORDERER_NAME}/tls"
+            mkdir -p ${OUTPUT_PATH}
+            getOrdererTlsSecret ${ORDERER_NAME}-tls
+          done
 
         volumeMounts:
-        {{ if .Values.vault.tls  }}
+        {{ if .Values.global.vault.tls  }}
         - name: vaultca
           mountPath: "/etc/ssl/certs/"
           readOnly: true
@@ -167,17 +200,17 @@ spec:
           subPath: bevel-vault.sh
       containers:
       - name: createchannel
-        image: {{ $.Values.metadata.images.fabrictools }}  
+        image: {{ $.Values.image.fabricTools }}:{{ $.Values.global.network.version }} 
         imagePullPolicy: IfNotPresent
         stdin: true
         tty: true
         env:
-        - name: ORDERERS_INFO
-          value: "{{ $.Values.orderers.orderer_info }}"
+        - name: ORDERERS_NAMES
+          value: "{{ $.Values.orderers | join " " -}}"
         - name: NAMESPACE
-          value: "{{ $.Values.metadata.namespace }}"
+          value: "{{ .Release.Namespace }}"
         - name: ADD_ORDERER
-          value: "{{ $.Values.add_orderer }}"
+          value: "{{ $.Values.addOrderer }}"
         command: ["sh", "-c"]
         args:
         - |-
@@ -190,8 +223,7 @@ spec:
             peer channel fetch config ${CHANNEL_NAME}_config_block.pb -o ${CORE_PEER_ADDRESS} -c ${CHANNEL_NAME} --tls --cafile ${ORDERER_CA}
           fi 
 
-          list=$(echo "$ORDERERS_INFO" | tr "*" "\n")
-          for ORDERER_NAME in $list
+          for ORDERER_NAME in $ORDERERS_NAMES
           do
             ADMIN_TLS_PRIVATE_KEY="${ADMIN_TLS_CERTS}/${ORDERER_NAME}/tls/server.key"
             ADMIN_TLS_SIGN_CERT="${ADMIN_TLS_CERTS}/${ORDERER_NAME}/tls/server.crt"
@@ -218,12 +250,12 @@ spec:
         workingDir: /opt/gopath/src/github.com/hyperledger/fabric/orderer
         envFrom:
         - configMapRef:
-            name: {{ $.Values.channel.name }}-config
+            name: {{ .Release.Name }}-config
         volumeMounts:
         - name: certificates
           mountPath: /opt/gopath/src/github.com/hyperledger/fabric/crypto
           readOnly: true
-        {{- if not $.Values.add_orderer }}
+        {{- if not $.Values.addOrderer }}
         - name: genesis
           mountPath: /opt/gopath/src/github.com/hyperledger/fabric/orderer/genesis
           readOnly: true
