--- a/platforms/hyperledger-fabric/charts/fabric-peernode/templates/configmap.yaml
+++ b/platforms/hyperledger-fabric/charts/fabric-peernode/templates/configmap.yaml
@@ -41,7 +41,7 @@ data:
   CORE_PEER_MSPCONFIGPATH: /etc/hyperledger/fabric/crypto/msp
   GODEBUG: "netdns=go"
   CORE_PEER_GOSSIP_SKIPHANDSHAKE: "true"
-  CORE_CHAINCODE_BUILDER: "{{ $.Values.peer.builder }}:{{ $.Values.cli.network.version }}"
+  CORE_CHAINCODE_BUILDER: "{{ $.Values.peer.builder }}:{{ $.Values.global.network.version }}"
   CORE_OPERATIONS_LISTENADDRESS: 0.0.0.0:9443
 ---
 apiVersion: v1
