--- a/platforms/hyperledger-fabric/charts/values/proxy-and-vault/ordererOrganization/genesis.yaml
+++ b/platforms/hyperledger-fabric/charts/values/proxy-and-vault/ordererOrganization/genesis.yaml
@@ -7,19 +7,14 @@ global:
     authPath: supplychain
     secretEngine: secretsv2
     secretPrefix: "data/supplychain"
-    imageSecretName: regcred
-    tls: false
-
   cluster:
     provider: azure
     cloudNativeServices: false
-
   proxy:
     provider: haproxy
     externalUrlSuffix: test.yourdomain.com
-
-network:
-  version: 2.2.2
+  network:
+    version: 2.5.4
 
 consensus:
   name: raft
@@ -37,7 +32,7 @@ organizations:
       ordererAddress: orderer2.test.yourdomain.com:443
     - orderer:
       name: orderer3
-      ordererAddress: orderer3.test.yourdomain.com:443     
+      ordererAddress: orderer3.test.yourdomain.com:443
 
   - organization:
     name: carrier
@@ -45,11 +40,11 @@ organizations:
     peers:
     - peer:
       name: peer0-carrier          
-      peerAddress: peer0-carrier.carrier-net.test.yourdomain.com:443 # External URI of the peer
+      peerAddress: peer0-carrier.carrier-net.test.yourdomain.com:443  # External URI of the peer
 
 channels:
   - channel:
-    channel_name: Allchannel
+    channelName: allchannel
     consortium: SupplyChainConsortium
     orderers:
       - supplychain  
@@ -61,4 +56,4 @@ channels:
 
 settings:
   removeGenesisOnDelete: true
-  removeGenesisConfigMapOnDelete: true
+  removeConfigMapOnDelete: true
