--- a/platforms/hyperledger-fabric/charts/values/proxy-and-vault/ordererOrganization/orderer.yaml
+++ b/platforms/hyperledger-fabric/charts/values/proxy-and-vault/ordererOrganization/orderer.yaml
@@ -7,15 +7,14 @@ global:
     authPath: supplychain
     secretEngine: secretsv2
     secretPrefix: "data/supplychain"
-    imageSecretName: regcred
-
   cluster:
     provider: azure
     cloudNativeServices: false
-
   proxy:
     provider: haproxy
     externalUrlSuffix: test.yourdomain.com
+  network:
+    version: 2.5.4
 
 catools:
   orgData:
@@ -32,14 +31,13 @@ catools:
     - orderer2
     - orderer3
 
-network:
-  version: 2.2.2
+channel:
+  name: allchannel
 
 orderer:
   logLevel: info
   localMspId: supplychainMSP
   tlsstatus: true
-  ordererAddress: orderer1.test.yourdomain.com:443
 
 consensus:
   name: raft
@@ -47,4 +45,4 @@ consensus:
 settings:
   removeConfigMapsOnDelete: true
   removeCertsOnDelete: true
-  generateCertificates: true
+  generateCertificates: false
